--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <kotlin.version>1.0.0-beta-4584</kotlin.version>
         <java.version>1.8</java.version>
+        <start-class>sbkotlin.ApplicationKt</start-class>
     </properties>
 
     <dependencies>
@@ -52,6 +53,7 @@
     </dependencies>
 
     <build>
+        <finalName>sbkotlin</finalName>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
 
         <plugins>
